# video-jungle-agent-examples

./: README.md  pyproject.toml
marketing_video_editor/: README.md  pyproject.toml
marketing_video_editor/src/marketing_video_editor/: crew.py  main.py
marketing_video_editor/src/marketing_video_editor/config/: agents.yaml  tasks.yaml
marketing_video_editor/src/marketing_video_editor/tools/: videojungle_basetool.py  videojungle_download.py  videojungle_edit_tool.py  videojungle_search_tool.py
